INIADロゴ画像の追加

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <img src="INIAD_logo.PNG" art="[INIADのロゴ画像]">
     <h1><span class="iniad">INIAD</span> オープンキャンパス</h1>
     <p>2017年9月9日に、<span class="iniad">INIAD</span>のオープンキャンパスを開催します。ふるってご参加ください。</p>
     <ul>
