INIAD外観画像の追加

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><span class="time">11:30〜15:00</span> 入試個別相談(随時)</li>
       </ul>
     </div>
+    <img src="INIAD外観.jpg" art="[INIADのイメージ画像]">
     <h2>INIADとは？</h2>
     <ul>
       <li><a href="concept.html">INIADのコンセプト</a></li>
